# AiSportAgent

./: .gitignore  LICENSE  Makefile  README.md  out.json  out_gpx.json  out_tcx.json  pyproject.toml  vercel.json
.github/workflows/: quality-gates.yml  tests.yml
Data/: RunGarminNoPower.fit  RunGarminStrydPower.fit  RunStryd.fit
ai_sport_agent/: __init__.py  cli.py
ai_sport_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_sport_agent/api/: v1.py
ai_sport_agent/core/: models.py
ai_sport_agent/parsers/: base_parser.py  fit_parser.py  gpx_parser.py  tcx_parser.py
backend/: README.md  requirements.txt
docs/: api.md  cli.md  examples.md  testing.md
examples/: README.md
examples/api/: curl_parse_gpx.sh  curl_validate_fit.sh
examples/csv/: lap_summary.csv  record_slice.csv
examples/json/: workout_mini_bike.json  workout_mini_run.json
fit-analyzer-next/: README.md
fit-analyzer-next/backend/: app.py
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  pages
frontend/.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
frontend/app/: layout.tsx  page.js
frontend/pages/: index.js
schema/: workout.schema.json
src/ai_sport_agent/: db.py  fit_analytics.py  parser.py
tests/: conftest.py  test_api_health.py  test_cli.py  test_derived_fields.py  test_fit_compressed_ts.py  test_fit_devfields.py  test_fit_parser.py  test_gpx_tcx.py
tests/data/: devfield.fit  mini.gpx  mini.tcx  minimal.fit
tests/utils/: fit_maker.py
(+37 files in other folders)
