[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sport-agent"
version = "0.0.1"
description = "AI coach tooling for IRONMAN disciplines"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "aptyp78" }]
dependencies = [
  "pydantic>=2.5,<3",
  "typer>=0.12,<1",
  "fastapi>=0.110,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "hypothesis>=6",
  "httpx>=0.24",
  "uvicorn[standard]>=0.23",
  "tqdm>=4.66",
  "python-multipart"
]

[project.scripts]
fitparser = "ai_sport_agent.cli:main"

[tool.setuptools.packages.find]
include = ["ai_sport_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
